@@ -1,3 +1,7 @@
+2003-07-16  Alasdair Allan <aa@astro.ex.ac.uk>
+
+         * Added filter support
+         
 2003-07-15  Alasdair Allan <aa@astro.ex.ac.uk>
 
          * Build.pm: Added score_response() method to generate a scoring
